--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
 
   batch:
+    insert:
+      limit: 1000000
     job:
       enabled: false
     jdbc:
