--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
 
     hikari:
-      maximum-pool-size: 10
-      minimum-idle: 5
-      idle-timeout: 30000
-      max-lifetime: 1800000
-      connection-timeout: 30000
+      maximum-pool-size: 1
+#      minimum-idle: 5
+#      idle-timeout: 30000
+#      max-lifetime: 1800000
+#      connection-timeout: 30000
 
 #  datasource:
 #    # Master DB (쓰기용)
